[gd_scene load_steps=67 format=2]

[ext_resource path="res://Vehicle/RX450h/RX450h.tscn" type="PackedScene" id=1]
[ext_resource path="res://EgoVehicle.gd" type="Script" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://RoadSurfaceMesh.gd" type="Script" id=4]
[ext_resource path="res://RoadMarkerMesh.gd" type="Script" id=5]
[ext_resource path="res://PointCloudMapMesh.gd" type="Script" id=6]
[ext_resource path="res://ObstacleSegmentationMesh.gd" type="Script" id=7]
[ext_resource path="res://TrajectoryMesh.gd" type="Script" id=8]
[ext_resource path="res://Camera.gd" type="Script" id=9]
[ext_resource path="res://DynamicObjectMesh.gd" type="Script" id=10]
[ext_resource path="res://icon-39.png" type="Texture" id=11]
[ext_resource path="res://Icon-39.gd" type="Script" id=12]
[ext_resource path="res://TrafficLightMesh.gd" type="Script" id=13]
[ext_resource path="res://Vehicle/HeadBeamLight.gd" type="Script" id=14]
[ext_resource path="res://icon_9ms77zmmn39/traffic_light.png" type="Texture" id=15]
[ext_resource path="res://icon_9ms77zmmn39/Red.png" type="Texture" id=16]
[ext_resource path="res://Menu.gd" type="Script" id=17]
[ext_resource path="res://TrafficLightRecognitionMesh.gd" type="Script" id=18]
[ext_resource path="res://Steering.gd" type="Script" id=19]
[ext_resource path="res://steering.png" type="Texture" id=20]
[ext_resource path="res://console_meter.png" type="Texture" id=21]
[ext_resource path="res://SourceCodePro-Light.otf" type="DynamicFontData" id=22]
[ext_resource path="res://console_meter_hand.png" type="Texture" id=23]
[ext_resource path="res://ConsoleMeter.gd" type="Script" id=24]
[ext_resource path="res://VectorMap.gd" type="Script" id=25]
[ext_resource path="res://PathMesh.gd" type="Script" id=26]
[ext_resource path="res://icon_9ms77zmmn39/green.png" type="Texture" id=27]
[ext_resource path="res://icon_9ms77zmmn39/yellow.png" type="Texture" id=28]
[ext_resource path="res://icon_9ms77zmmn39/dianliang.png" type="Texture" id=29]
[ext_resource path="res://icon_9ms77zmmn39/chache.png" type="Texture" id=30]
[ext_resource path="res://icon_9ms77zmmn39/dangwei.png" type="Texture" id=31]
[ext_resource path="res://Dangwei.gd" type="Script" id=33]
[ext_resource path="res://Yellow.gd" type="Script" id=34]
[ext_resource path="res://Chache.gd" type="Script" id=35]
[ext_resource path="res://Red.gd" type="Script" id=36]
[ext_resource path="res://Dianliang.gd" type="Script" id=37]
[ext_resource path="res://TrafficLight.gd" type="Script" id=38]
[ext_resource path="res://Green.gd" type="Script" id=39]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 2.40455, 0.804875, 1.07238 )

[sub_resource type="ProceduralSky" id=28]
resource_name = "sky"
sky_top_color = Color( 1, 1, 1, 1 )
sky_horizon_color = Color( 0, 0.32549, 0.580392, 1 )
sky_curve = 0.245887
ground_bottom_color = Color( 0.145098, 0.145098, 0.145098, 1 )
ground_horizon_color = Color( 0, 0.138012, 0.246094, 1 )
ground_curve = 0.0627669

[sub_resource type="Environment" id=21]
resource_name = "background"
background_mode = 2
background_sky = SubResource( 28 )
fog_color = Color( 0.501961, 0.6, 0.701961, 0.6 )
fog_depth_enabled = false
fog_depth_end = 1609.4

[sub_resource type="SpatialMaterial" id=12]
render_priority = -2
flags_transparent = true
flags_use_point_size = true
params_blend_mode = 1
albedo_color = Color( 0.329412, 0.254902, 0.596078, 1 )
distance_fade_mode = 1
distance_fade_min_distance = 0.0
distance_fade_max_distance = 200.0

[sub_resource type="ArrayMesh" id=4]
resource_name = "mesh"

[sub_resource type="SpatialMaterial" id=13]
flags_transparent = true
flags_unshaded = true
flags_use_point_size = true
params_point_size = 2.0
albedo_color = Color( 0.964706, 1, 0, 0.219608 )

[sub_resource type="ArrayMesh" id=10]
resource_name = "mesh"

[sub_resource type="SpatialMaterial" id=17]
render_priority = -3
flags_transparent = true
vertex_color_use_as_albedo = true
albedo_color = Color( 0.607843, 0.607843, 0.607843, 1 )

[sub_resource type="ArrayMesh" id=16]
resource_name = "mesh"

[sub_resource type="SpatialMaterial" id=19]
render_priority = -2
flags_transparent = true
vertex_color_use_as_albedo = true
distance_fade_mode = 1
distance_fade_min_distance = 200.0
distance_fade_max_distance = 0.0

[sub_resource type="ArrayMesh" id=18]
resource_name = "mesh"

[sub_resource type="SpatialMaterial" id=30]
flags_unshaded = true
vertex_color_use_as_albedo = true

[sub_resource type="ArrayMesh" id=29]
resource_name = "mesh"

[sub_resource type="SpatialMaterial" id=34]
render_priority = -1
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true

[sub_resource type="ArrayMesh" id=35]
resource_name = "mesh"

[sub_resource type="SpatialMaterial" id=24]
render_priority = -1
flags_unshaded = true
vertex_color_use_as_albedo = true
albedo_color = Color( 1, 1, 1, 0.823529 )
distance_fade_mode = 1
distance_fade_min_distance = 0.0
distance_fade_max_distance = 60.0

[sub_resource type="ArrayMesh" id=23]
resource_name = "mesh"

[sub_resource type="SpatialMaterial" id=26]
render_priority = 1
flags_transparent = true
albedo_color = Color( 0, 0.909804, 1, 0.623529 )

[sub_resource type="ArrayMesh" id=27]
resource_name = "mesh"

[sub_resource type="SpatialMaterial" id=32]
render_priority = 1
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true

[sub_resource type="ArrayMesh" id=31]
resource_name = "mesh"

[sub_resource type="DynamicFont" id=33]
size = 80
use_filter = true
font_data = ExtResource( 22 )

[sub_resource type="StyleBoxFlat" id=37]
bg_color = Color( 0.988235, 0.00784314, 0.00784314, 1 )

[sub_resource type="StyleBoxFlat" id=38]

[sub_resource type="DynamicFontData" id=42]

[sub_resource type="DynamicFont" id=43]
size = 24
outline_size = 3
font_data = SubResource( 42 )

[sub_resource type="StyleBoxFlat" id=40]
bg_color = Color( 0.105882, 0.862745, 0.0196078, 1 )

[sub_resource type="StyleBoxFlat" id=41]

[node name="Main" type="Spatial"]
script = ExtResource( 3 )

[node name="EgoVehicle" type="Spatial" parent="."]
script = ExtResource( 2 )

[node name="EgoVehicleKinematicBody" type="KinematicBody" parent="EgoVehicle"]

[node name="HeadBeamLight" type="SpotLight" parent="EgoVehicle/EgoVehicleKinematicBody"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 2.79841, 0.861473, 0 )
light_energy = 2.0
spot_range = 81.425
script = ExtResource( 14 )

[node name="CollisionShape" type="CollisionShape" parent="EgoVehicle/EgoVehicleKinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.44026, 0.82268, 0 )
shape = SubResource( 1 )

[node name="VehicleBody" parent="EgoVehicle/EgoVehicleKinematicBody" instance=ExtResource( 1 )]
transform = Transform( 0.999583, -0.0288986, 0, 0.0288986, 0.999582, 0, 0, 0, 1, 0, 0, -0.065 )

[node name="Camera" type="Spatial" parent="EgoVehicle"]
script = ExtResource( 9 )

[node name="Horizon" type="Spatial" parent="EgoVehicle/Camera"]

[node name="Vertical" type="Spatial" parent="EgoVehicle/Camera/Horizon"]

[node name="ViewCamera" type="Camera" parent="EgoVehicle/Camera/Horizon/Vertical"]
transform = Transform( -4.37114e-08, 0.34202, -0.939693, 0, 0.939693, 0.34202, 1, 1.49502e-08, -4.10753e-08, -8, 4, 0 )
environment = SubResource( 21 )
size = 90.53
far = 300.0

[node name="PointCloudMapMesh" type="MeshInstance" parent="."]
material_override = SubResource( 12 )
mesh = SubResource( 4 )
script = ExtResource( 6 )

[node name="ObstacleSegmentationMesh" type="MeshInstance" parent="."]
material_override = SubResource( 13 )
mesh = SubResource( 10 )
skeleton = NodePath("../EgoVehicle")
script = ExtResource( 7 )

[node name="VectorMap" type="Spatial" parent="."]
script = ExtResource( 25 )

[node name="RoadSurfaceMesh" type="MeshInstance" parent="VectorMap"]
material_override = SubResource( 17 )
mesh = SubResource( 16 )
skeleton = NodePath("../..")
script = ExtResource( 4 )

[node name="RoadMarkerMesh" type="MeshInstance" parent="VectorMap"]
material_override = SubResource( 19 )
mesh = SubResource( 18 )
skeleton = NodePath("../RoadSurfaceMesh")
script = ExtResource( 5 )

[node name="TrafficLightMesh" type="MeshInstance" parent="VectorMap"]
material_override = SubResource( 30 )
mesh = SubResource( 29 )
script = ExtResource( 13 )

[node name="PathDrivableAreaMesh" type="MeshInstance" parent="."]
material_override = SubResource( 34 )
mesh = SubResource( 35 )
script = ExtResource( 26 )

[node name="TrajectoryMesh" type="MeshInstance" parent="."]
material_override = SubResource( 24 )
mesh = SubResource( 23 )
script = ExtResource( 8 )

[node name="DynamicObjectMesh" type="MeshInstance" parent="."]
material_override = SubResource( 26 )
mesh = SubResource( 27 )
script = ExtResource( 10 )

[node name="TrafficLightRecognitionMesh" type="MeshInstance" parent="."]
material_override = SubResource( 32 )
mesh = SubResource( 31 )
skeleton = NodePath("../VectorMap")
script = ExtResource( 18 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.866026, 0.5, 0, -0.5, -0.866026, 0, 1.77694, 0 )
visible = false
light_specular = 0.0

[node name="Menu" type="Control" parent="."]
script = ExtResource( 17 )

[node name="PointCloudMapMeshCheckButton" type="CheckButton" parent="Menu"]
margin_right = 76.0
margin_bottom = 40.0
focus_mode = 0
pressed = true
enabled_focus_mode = 0
text = "PointCloud Map"

[node name="NightModeCheckButton" type="CheckButton" parent="Menu"]
margin_top = 40.0
focus_mode = 0
pressed = true
action_mode = 0
enabled_focus_mode = 0
text = "Night Mode"

[node name="OnlyKnownObjectCheckButton" type="CheckButton" parent="Menu"]
margin_top = 80.0
focus_mode = 0
pressed = true
enabled_focus_mode = 0
text = "Only Known Objects"

[node name="RenderingQuality" type="HBoxContainer" parent="Menu"]
margin_left = 6.0
margin_top = 130.0
margin_right = 300.0

[node name="Label" type="Label" parent="Menu/RenderingQuality"]
margin_top = 1.0
margin_right = 185.0
margin_bottom = 15.0
text = "Rendering Quality (Low-High)"

[node name="MSAASlider" type="HSlider" parent="Menu/RenderingQuality"]
margin_left = 189.0
margin_right = 294.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 4.0
tick_count = 5
ticks_on_borders = true

[node name="HBoxContainer" type="HBoxContainer" parent="Menu"]
margin_left = 1.0
margin_top = 158.0
margin_right = 236.0
margin_bottom = 198.0

[node name="ModeSwitch" type="CheckButton" parent="Menu/HBoxContainer"]
margin_right = 254.0
margin_bottom = 40.0
focus_mode = 0
pressed = true
enabled_focus_mode = 0
text = "Mode Switch (Auto/Manual)"

[node name="BGMButton" type="CheckButton" parent="Menu"]
margin_top = 200.0
margin_right = 111.0
margin_bottom = 240.0
focus_mode = 0
pressed = true
enabled_focus_mode = 0
text = "BGM"

[node name="VehicleStatus" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
alignment = 1

[node name="Steering" type="Sprite" parent="VehicleStatus"]
position = Vector2( -72, -86 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 20 )
script = ExtResource( 19 )

[node name="ConsoleMeter" type="Sprite" parent="VehicleStatus"]
position = Vector2( 82, -108 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 21 )
script = ExtResource( 24 )

[node name="VelocityLabel" type="Label" parent="VehicleStatus/ConsoleMeter"]
margin_left = -210.0
margin_top = 58.0
margin_right = 216.0
margin_bottom = 185.0
custom_colors/font_color = Color( 0.321569, 0.321569, 0.321569, 1 )
custom_fonts/font = SubResource( 33 )
text = "0Km/h"
align = 1
valign = 1

[node name="Hand" type="Sprite" parent="VehicleStatus/ConsoleMeter"]
position = Vector2( 0, 50 )
texture = ExtResource( 23 )

[node name="TrafficLight" type="Sprite" parent="VehicleStatus"]
position = Vector2( 463, -44.9999 )
scale = Vector2( 0.425, 0.425 )
texture = ExtResource( 15 )
script = ExtResource( 38 )

[node name="Green" type="Sprite" parent="VehicleStatus"]
position = Vector2( 440, -45 )
scale = Vector2( 0.0968749, 0.0968749 )
texture = ExtResource( 27 )
script = ExtResource( 39 )

[node name="Red" type="Sprite" parent="VehicleStatus"]
position = Vector2( 486, -45 )
scale = Vector2( 0.0962502, 0.0962502 )
texture = ExtResource( 16 )
script = ExtResource( 36 )

[node name="Yellow" type="Sprite" parent="VehicleStatus"]
position = Vector2( 463, -45 )
scale = Vector2( 0.0965624, 0.0965624 )
texture = ExtResource( 28 )
script = ExtResource( 34 )

[node name="Chache" type="Sprite" parent="VehicleStatus"]
light_mask = 2
position = Vector2( -353.767, -44.3125 )
scale = Vector2( 0.206152, 0.206152 )
texture = ExtResource( 30 )
script = ExtResource( 35 )

[node name="ProgressBar" type="ProgressBar" parent="VehicleStatus/Chache"]
margin_left = -71.0
margin_top = 137.0
margin_right = 86.0
margin_bottom = 178.0
custom_styles/fg = SubResource( 37 )
custom_styles/bg = SubResource( 38 )
step = 1.0
page = 10.0
value = 20.0

[node name="Dangwei" type="Sprite" parent="VehicleStatus"]
position = Vector2( -412.389, -43.75 )
scale = Vector2( 0.225, 0.225 )
texture = ExtResource( 31 )
script = ExtResource( 33 )

[node name="Label" type="Label" parent="VehicleStatus/Dangwei"]
margin_left = -87.0
margin_top = 88.0
margin_right = 91.0
margin_bottom = 195.0
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 10.0
custom_fonts/font = SubResource( 43 )
text = "Gear"
align = 1
valign = 1
uppercase = true
lines_skipped = 1

[node name="Icon-39" type="Sprite" parent="VehicleStatus"]
self_modulate = Color( 0.601562, 0.601562, 0.601562, 1 )
position = Vector2( -512, -65 )
scale = Vector2( 0.118519, 0.121519 )
texture = ExtResource( 11 )
centered = false
script = ExtResource( 12 )

[node name="Dianliang" type="Sprite" parent="VehicleStatus/Icon-39"]
self_modulate = Color( 0.501961, 0.478431, 0.478431, 1 )
position = Vector2( 286.874, 181.042 )
scale = Vector2( 0.683402, 0.66653 )
texture = ExtResource( 29 )
script = ExtResource( 37 )

[node name="ProgressBar" type="ProgressBar" parent="VehicleStatus/Icon-39/Dianliang"]
margin_left = -222.233
margin_top = 333.349
margin_right = 166.767
margin_bottom = 431.349
custom_styles/fg = SubResource( 40 )
custom_styles/bg = SubResource( 41 )
step = 1.0
value = 80.0

[connection signal="toggled" from="Menu/PointCloudMapMeshCheckButton" to="PointCloudMapMesh" method="_on_CheckButton_toggled"]
[connection signal="toggled" from="Menu/NightModeCheckButton" to="EgoVehicle" method="_on_NightModeCheckButton_toggled"]
[connection signal="toggled" from="Menu/NightModeCheckButton" to="EgoVehicle/Camera" method="_on_NightModeCheckButton_toggled"]
[connection signal="toggled" from="Menu/OnlyKnownObjectCheckButton" to="DynamicObjectMesh" method="_on_OnlyKnownObjectCheckButton_toggled"]
[connection signal="value_changed" from="Menu/RenderingQuality/MSAASlider" to="." method="_on_MSAASlider_value_changed"]
